--- a/pages/schedule/schedule.wxml
+++ b/pages/schedule/schedule.wxml
@@ -45,12 +45,23 @@
        </view>
        <view class='date-box'>
            <view wx:for='{{dateArr}}' class='{{isToday == item.isToday ? "nowDay" : ""}}' data-date='{{item.isToday}}'>            
-                <view class='date-head'>
+                <view class='date-head' bindtap='showActList' data-date="{{item}}">
                     <view>{{item.dateNum}}</view>
+                    <view class="point" wx:if="{{item.hasAct}}"></view>
                 </view>
                 <!-- <view class='date-weight'>{{item.weight}}</view> -->
             </view>
         </view>
+    </view>
+    <!--某一天的活动-->
+    <view class='actList'  wx:if="{{showDateActList}}">
+        <i-cell-group i-class="act-wrap">
+            <block wx:for="{{DatetActList}}" wx:key="id">
+                <i-cell title="{{item.name}}" label="{{item.description}}" is-link bindtap="goAct" 
+                    data-actid="{{item.id}}" data-actname="{{item.name}}">
+                </i-cell> 
+            </block>
+        </i-cell-group>
     </view>
 </view>
 
