--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -39,9 +39,12 @@
         </view>
         <view class="bottom-right" bind:tap="editAct">
                   <image class="arrow" src="/icon/rightArrow.png"></image>
-                  <text class="txt" style="font-size: 35rpx;"> 编辑</text>
+                  <text class="txt" style="font-size: 35rpx;"> 编辑活动</text>
         </view>
-        
+        <view class="bottom-right" bind:tap="deleteAct">
+                  <image class="arrow" src="/icon/rightArrow.png"></image>
+                  <text class="txt" style="font-size: 35rpx;"> 删除活动</text>
+        </view>
       </view>
     </i-card>
 </view>
