--- a/pages/index/recommend/recommend.wxml
+++ b/pages/index/recommend/recommend.wxml
@@ -17,7 +17,7 @@
         <image class="org-avator" src="{{item.avator}}"></image>
       </block>
       <block wx:else> 
-        <image class="org-avator" src="/icon/sample.png"></image>
+        <image class="org-avator" src="/icon/person.png"></image>
       </block>
       <text class="org-name">{{item.name}}</text>
     </view>
