--- a/pages/my/my-account/my-account.wxml
+++ b/pages/my/my-account/my-account.wxml
@@ -2,12 +2,10 @@
 
 
 <van-cell-group>
-    <van-cell title="我的用户id" value=" {{userId}}" />
-    <van-cell wx:if="{{verifiedEmail != ''}}"
-      title="认证邮箱"
-      value="{{verifiedEmail}}"
-      border="{{ false }}"
-    />
+    <view wx:if="{{verifiedEmail != ''}}">
+      <van-cell title="我的用户id" value=" {{userId}}" />
+      <van-cell title="认证邮箱" value="{{verifiedEmail}}" border="{{ false }}"/>
+    </view>
 </van-cell-group>
 
 
@@ -38,29 +36,30 @@
       border="{{ true }}"
     >
   </van-field>
-  <van-button class="my-button" slot="button" size="small" type="primary" custom-class="button" bindtap="submitVerifyCode">提交验证</van-button>
+  <van-button class="my-button" slot="button" size="small" type="primary" custom-class="button" bindtap="submitCertificate">提交验证</van-button>
 </view>
 
 
+<view wx:if="{{verifiedEmail != ''}}">
+  <van-field
+        center
+        clearable
+        label="昵称"
+        placeholder="{{nickName}}"
+        bindinput="inputNickNameHandler"
+        border="{{ true }}"
+      >
+  </van-field>
 
-<van-field
-      center
-      clearable
-      label="昵称"
-      placeholder="{{nickName}}"
-      bindinput="inputNickNameHandler"
-      border="{{ true }}"
-    >
-</van-field>
+  <van-field
+        center
+        clearable
+        label="个人描述"
+        placeholder="{{motto}}"
+        bindinput="inputMottoHandler"
+        border="{{ false }}"
+      >
+  </van-field>
 
-<van-field
-      center
-      clearable
-      label="个人描述"
-      placeholder="{{motto}}"
-      bindinput="inputMottoHandler"
-      border="{{ false }}"
-    >
-</van-field>
-
-<van-button class="my-button" slot="button" size="small" type="primary" custom-class="button" bindtap="submitUserInfo">修改个人信息</van-button>
+  <van-button class="my-button" slot="button" size="small" type="primary" custom-class="button" bindtap="submitUserInfo">修改个人信息</van-button>
+</view>
