beautify my-home; remove most warnings about missing wx:key or uncorrect wx:key

--- a/pages/follows/follows-home/follows-home.wxml
+++ b/pages/follows/follows-home/follows-home.wxml
@@ -13,7 +13,7 @@
       </view> -->
   </view>
   <view class="org-list">
-    <view class="org-item" wx:for="{{org_list}}" data-orgid="{{item.org.id}}" bindtap="toOrg">
+    <view class="org-item" wx:for="{{org_list}}" wx:key='id' data-orgid="{{item.org.id}}" bindtap="toOrg">
       <block wx:if="{{item.org.avator != null}}"> 
         <image class="org-avator" src="{{item.org.avator}}"></image>
       </block>
@@ -72,7 +72,7 @@
         <view slot="content">您还没有关注任何组织哦</view>
       </i-card>
     </view>
-    <view class="msg-item" wx:for="{{act_list}}">
+    <view class="msg-item" wx:for="{{act_list}}" wx:key='id'>
       <i-card i-class="card-demo" title="{{item.org ? item.org.name : item.block.name}}" extra='{{item.pub_time}}' thumb="{{item.org ? item.org.avatar : ''}}" bindtap="toActivity" data-actid="{{item.id}}">
       <!-- TODO: 上一行avatar换成活动图片 -->
         <view slot="content">
