--- a/pages/sections/act-list/act-list.wxml
+++ b/pages/sections/act-list/act-list.wxml
@@ -39,11 +39,8 @@
       <view class='title_2'><image src="/icon/{{showIndex[1]? 'up':'down'}}.png"></image></view>
     </view>
     <view class='mem-list' wx:if="{{showIndex[1]}}">
-          <view class="mem-item" wx:for="{{memList}}" wx:key="{{irem.person.id}}">
+          <view class="mem-item" wx:for="{{memList}}">
             <block> 
-           
-           
-           
               <image class="mem-avator" src="{{item.person.avatar}}"></image>
             </block>
             <text class="mem-name">{{item.person.id == orgInfo.owner.id ? item.person.name+"(负责人)" : item.person.name}}</text>
