--- a/app.wxss
+++ b/app.wxss
@@ -5,9 +5,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  /* padding: 200rpx 0; */
   box-sizing: border-box;
 } 
 
