--- a/pages/my/my-home/my-home.wxss
+++ b/pages/my/my-home/my-home.wxss
@@ -1,17 +1,38 @@
 /* pages/my/my-home/my-home.wxss */
-.userinfo {
+.userinfo-wrap {
+    position: relative;
+    height: 40%;
+    /* background-image: url('/icon/beihang_background.png'); */
+  }
+
+.background {
+  opacity: 0.3;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+  .userinfo {
+    margin: 120rpx;
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #aaa;
   }
   
   .userinfo-avatar {
     overflow: hidden;
     width: 128rpx;
     height: 128rpx;
-    margin: 20rpx;
     border-radius: 50%;
+  }
+
+  .userinfo-nickname {
+    text-align: center;
+    color: black;
+    font-weight: bold;
   }
   
   .usermotto {
