--- a/pages/sections/sections-home/sections-home.wxml
+++ b/pages/sections/sections-home/sections-home.wxml
@@ -3,8 +3,16 @@
 <!-- <view wx:if="{{!havelogin}}" class="hover-login" capture-catch:tap="callLogin"></view> -->
 
 <!--板块界面-->
-<view class="forum">
+<!-- <view class="forum">
     <view class="item {{(index+1) % 3 == 0 ? 'last' : ''}}" wx:for="{{forum_list}}" wx:key='id'
+     data-name="{{item.title}}" data-has-org="{{item.hasOrgLevel}}" data-forumid="{{index+1}}" wx:key="id" bindtap="handleClick">
+        <image class="icon" src="{{item.picUrl}}"></image>
+        <text class="text">{{item.title}}</text>
+    </view>
+</view> -->
+
+<view class="forum">
+    <view class="item" wx:for="{{forum_list}}" wx:key='id'
      data-name="{{item.title}}" data-has-org="{{item.hasOrgLevel}}" data-forumid="{{index+1}}" wx:key="id" bindtap="handleClick">
         <image class="icon" src="{{item.picUrl}}"></image>
         <text class="text">{{item.title}}</text>
