--- a/pages/sections/sections-home/sections-home.wxss
+++ b/pages/sections/sections-home/sections-home.wxss
@@ -26,16 +26,18 @@
 
 .forum {
   display: flex;
-  flex-wrap:wrap;
-  margin-bottom: 20rpx;
+  flex-direction: column;
+  align-items: center;
+  /* flex-wrap:wrap;
+  margin-bottom: 20rpx; */
 }
 
 .forum .item {
   display: block;
-  height: 241rpx;
+  height: 200rpx;
   width: 210rpx;
   margin-right: 47rpx;
-  margin-top: 20rpx;
+  margin-top: 15rpx;
 }
 
 .forum .last {
@@ -45,18 +47,21 @@
 .forum .item .icon {
   height: 149rpx;
   width: 187rpx;
+  border-radius: 25px;
+  /*border-color单独使用是不起作用的，必须得先使用border-style来设置边框样式。*/
+  border-style: solid; 
+  border-width: 1rpx;
+  border-color: grey;
+
 }
 
-.icon {
-  border-radius: 25px;
-}
 
 .forum .item .text {
   display: block;
   text-align: center;
   font-size: 32rpx;
   color: #666;
-  height: 72rpx;
+  height: 40rpx;
   width: 187rpx;
   overflow:hidden;
 }
